# geopl

./: Cargo.toml  README.md  pyproject.toml
geopl/: __init__.py
src/: exprs.rs  lib.rs  main.rs
src/kmz/: builders.rs  enums.rs  mod.rs  parse_fn.rs
src/ops/: exprs_issues.rs  mod.rs  run_op.rs  to_geom.rs  to_pl.rs
